seafile/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.service.expose.storage-class-name: default
    kompose.service.healthcheck.readiness.interval: 10s
    kompose.service.healthcheck.readiness.retries: "3"
    kompose.service.healthcheck.readiness.test: healthcheck.sh --su-mysql --connect --innodb_initialized
    kompose.service.healthcheck.readiness.timeout: 10s
    kompose.volume.size: 1Gi
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
  namespace: seafile
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.service.expose.storage-class-name: default
        kompose.service.healthcheck.readiness.interval: 10s
        kompose.service.healthcheck.readiness.retries: "3"
        kompose.service.healthcheck.readiness.test: healthcheck.sh --su-mysql --connect --innodb_initialized
        kompose.service.healthcheck.readiness.timeout: 10s
        kompose.volume.size: 1Gi
      creationTimestamp: null
      labels:
        io.kompose.network/compose-seafile-net: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: MARIADB_AUTO_UPGRADE
              value: "true"
            - name: MYSQL_LOG_CONSOLE
              value: "true"
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mariadb-secret
                  key: MYSQL_ROOT_PASSWORD
          image: mariadb:10.11.9
          name: db
          ports:
            - containerPort: 3306
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - healthcheck.sh
                - --su-mysql
                - --connect
                - --innodb_initialized
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 10
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: seafile-mariadb
      restartPolicy: Always
      volumes:
        - name: seafile-mariadb
          persistentVolumeClaim:
            claimName: seafile-mariadb
status: {}
