seafile/seafile-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seafile
  namespace: seafile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seafile
  template:
    metadata:
      labels:
        app: seafile
    spec:
      containers:
        - name: seafile
          #        image: seafileltd/seafile-mc:9.0.10
          #        image: seafileltd/seafile-mc:11.0-latest
          # seafile-pro-mc:11.0-latest
          image: seafileltd/seafile-mc:11.0.13-arm
          ports:
            - containerPort: 80
          #        - containerPort: 443
          #          name:  seafile-secure
          volumeMounts:
            - name: seafile-data
              mountPath: /shared
      volumes:
        - name: seafile-data
          persistentVolumeClaim:
            claimName: seafile-data
      restartPolicy: Always
      # to get image from protected repository
      #imagePullSecrets:
      #  - name: regcred
