seafile/memcached-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: memcached
  name: memcached
  namespace: seafile
spec:
  ports:
    - name: "11211"
      port: 11211
      targetPort: 11211
  selector:
    io.kompose.service: memcached
status:
  loadBalancer: {}
