seafile/seafile-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seafile
  namespace: seafile
spec:
  selector:
    app: seafile
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      #nodePort: 30000
