seafile/seafile-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seafile-nginx
  namespace: seafile
  annotations:
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: wnsrt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "seafile.wnsrt.de"
      secretName: seafile
  
  rules:
    - host: seafile.wnsrt.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seafile
                port:
                  number: 80
